hphp/hack/test/typecheck/parse_int_with_underscore_bad3.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class Foo {
  const int b = 0x_12;
}
